@@ -44,7 +44,9 @@ expected_vcprojfile = TestSConsMSVS.expected_vcprojfile_8_0
 
 
 test.write('SConstruct', """\
-env=Environment(platform='win32', tools=['msvs'], MSVS_VERSION='8.0')
+env=Environment(platform='win32', tools=['msvs'], MSVS_VERSION='8.0',
+                CPPDEFINES=['DEF1', 'DEF2'],
+                CPPPATH=['inc1', 'inc2'])
 
 testsrc = ['test1.cpp', 'test2.cpp']
 testincs = ['sdk.h']
